update template & change intro text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <img class="intro-img" src="images/cat.png" alt="cats"/>
             <section class="right-side">
                 <p class="description">
-                    Stránka "My healthy cat" je ideálním místem pro všechny, kteří chtějí zajistit svým kočičím mazlíčkům co nejlepší péči. Naše stránka se zaměřuje na poskytování užitečných tipů a rad, co dělat a nedělat jako majitel kočky, abyste zajistili zdraví, štěstí a pohodu svého chlupatého kamaráda. Naše stránka je pravidelně aktualizována novými články a radami, které vám pomohou vytvořit harmonický a láskyplný domov pro vaši kočku. Navštivte nás a staňte se součástí komunity, která miluje kočky a sdílí zkušenosti a rady, jak o ně co nejlépe pečovat.
+                    Ahoj! Pokud chceš poradit jak pečovat o svého čtyřnohého společníka co nejlépe, pak jsi tu správně! 
+                    Nebo se chceš jen pobavit nad memes a nebo vidět kočky ostatních návštevníku? I pro tebe máme místo.
                       </p>
                 <section class="page-link">
                     <a class="button" href="memes/memes.html">Memes</a>
