--- a/template.html
+++ b/template.html
@@ -22,13 +22,17 @@
     </ul>
     -->
     <header>
-      <h1 id="logo">My Healthy Cat</h1>
+      <div id="logo">
+         <img class="logo-img" src="images/Návrh bez názvu.png" alt="logo">
+         <h1 class="title">My Healthy Cat</h1> 
+      </div> 
+      
       <div class="socials">
-        <a href=""><img class="icon facebook" src="images/facebook.png" alt="facebook link"></a>
-        <a href=""><img class="icon" src="images/instagram.png" alt="instagram link"></a>
-        <a href=""><img class="icon" src="images/youtube.png" alt="youtube link"></a>
+          <a href=""><img class="icon facebook" src="images/facebook.png" alt="facebook link"></a>
+          <a href=""><img class="icon" src="images/instagram.png" alt="instagram link"></a>
+          <a href=""><img class="icon" src="images/youtube.png" alt="youtube link"></a>
       </div>
-    </header>
+  </header>
    
     <footer>
         My Healthy Cat 2024
