--- a/rady/rady.html
+++ b/rady/rady.html
@@ -125,6 +125,7 @@
           Alkohol také není vždy zjevně prezentován jako nápoj, protože může být obsažen v mnoha "normálních" domácích
           předmětech, včetně syrového droždí na pečení chleba a hnijícího/kvasícího ovoce. </p>
       </div>
+      <div class="article-box">
         <h3>Proč je odstraňování drápků pro vaše kočky škodlivé?: </h3>
         <p class="baf">Odstraňování drápků u koček zahrnuje úplné odstranění prvního kloubu prstů. Tato praxe byla v
           mnoha zemích zakázána a při diskusích o ní často panuje napětí. Odstraňování drápků u koček je však spojováno
