--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <div id="logo">
            <img class="logo-img" src="images/Návrh bez názvu.png" alt="logo">
-           <h1 class="title">My Healthy Cat</h1> 
+           <a class="title" href="index.html"><p>My Healthy Cat</p></a>
         </div> 
         
         <div class="socials">
