--- a/memes/memes.html
+++ b/memes/memes.html
@@ -27,24 +27,30 @@
     </header>
     <h2>Funny Cats</h2>
    
-    <p>Sice je důležité vědět, jak se o kočičí mazlíčky správně starat, ale neméně důležité je nechat se jimi pobavit. Tato zvířátka jsou významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Užijte si proto následující obrázky!</p>
+    <p>Sice je důležité vědět, jak o kočičí mazlíčky správně pečovat, ale neméně důležité je nechat se jimi pobavit. Tato neobyčejná a fascinující zvířáta bývají často významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Na této stránce najdete pár nejlepších memů, které jsme vybíraly se slzami v očích. Pobavte se s námi! </p>
 <section>
   
     <div class="gallery-img">
    <img src="../images/meme1.jpg" alt="frajer" >
    <img src="../images/meme2.jpg" alt="kočka v práci" >
-   <img src="../images/meme3.jpg" alt="hladová kočka">
    <img src="../images/meme_sad_cat.jpg" alt="smutná kočka">
-   <img src="../images/meme_cat_in_milk.jpg" alt="kočka v mléku">
-   <img src="../images/meme_skleneny_stul.jpg" alt="zespoda na skle">
-   <img src="../images/meme_tlusta_kocka.jpg" alt="tlustá kočka">
    <img src="../images/meme_sklenice.jpg" alt="ve skleničce">
+   <img src="../images/meme_cat_in_milk.jpg" alt="kočka v mléku">
    <img src="../images/meme_snack.jpg" alt="snack">
    <img src="../images/meme_selfie.jpg" alt="selfie">
    <img src="../images/meme_math.jpg" alt="matika">
-   <img src="../images/meme_rucicky.jpg" alt="ručičky">
-   <img src="../images/kocka_nee.avif" alt="odpor">
+   <img src="../images/meme_ugly.jpg" alt="is it because i'm ugly?">
+   <img src="../images/meme_rucee.jpg" alt="s ručičkama">
    <img src="../images/meme_eepy.webp" alt="sleepy cat">
+   <img src="../images/meme_joke.jpg" alt="i'm taken as a joke">
+   <img src="../images/meme_angry.jpg" alt="no talk me i'm angy">
+   <img src="../images/meme_tlusta_kocka.jpg" alt="tlustá kočka">
+   <img src="../images/meme_hlad.jpg" alt="thin cat">
+   <img src="../images/meme3.jpg" alt="hladová kočka">
+   <img src="../images/meme_again.webp" alt="it will happen again">
+   <img src="../images/meme_panties.jpg" alt="svůdná kočka">
+   <img src="../images/meme_egg.jpg" alt="no thoughts, brain scrambled egg">  
+   <img src="../images/meme_zuby.jpg" alt="s lidkýma zubama">
 </div>
 
 </section>
