--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             <img class="intro-img" src="images/cat.png" alt="cats"/>
             <section class="right-side">
                 <p class="description">
-                    Ahoj! Pokud chceš poradit jak pečovat o svého čtyřnohého společníka co nejlépe, pak jsi tu správně! 
-                    Nebo se chceš jen pobavit nad memes a nebo vidět kočky ostatních návštevníku? I pro tebe máme místo.
+                    Vítej! Pokud toužíš po radách ohledně péče o tvou kočku, jsi tu správně. Chceš se ale pouze pobavit nad memes, nebo se chceš podívat na čtyřnohé kamarády návštěvníků naší stránky? I v takovém případě tu najdeš, co hledáš.
                       </p>
                 <section class="page-link">
                     <a class="button" href="memes/memes.html">Memes</a>
