--- a/memes/memes.html
+++ b/memes/memes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>My Healthy Cat</title>
-  <link rel="icon" type="image/x-icon" href="images/Návrh bez názvu.png" />
+  <link rel="icon" type="image/x-icon" href="../images/Návrh bez názvu.png" />
   <link rel="stylesheet" href="../css/main.css" />
   <link rel="stylesheet" href="memes.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
