--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <a class="button" href="memes/memes.html">Memes</a>
                     <a class="button" href="rady/rady.html">Rady</a>
                     <a class="button" href="galerie/galerie.html">Galerie</a>
+                    <a class="button" href="obleceni/obleceni.html">Oblečení</a>
                 </section>
             </section>
         </section>
