--- a/template.html
+++ b/template.html
@@ -23,14 +23,14 @@
     -->
     <header>
       <div id="logo">
-         <img class="logo-img" src="images/Návrh bez názvu.png" alt="logo">
+         <img class="logo-img" src="../images/Návrh bez názvu.png" alt="logo">
          <a class="title" href="../index.html"><p>My Healthy Cat</p></a> 
       </div> 
       
       <div class="socials">
-          <a href=""><img class="icon facebook" src="images/facebook.png" alt="facebook link"></a>
-          <a href=""><img class="icon" src="images/instagram.png" alt="instagram link"></a>
-          <a href=""><img class="icon" src="images/youtube.png" alt="youtube link"></a>
+          <a href=""><img class="icon facebook" src="../images/facebook.png" alt="facebook link"></a>
+          <a href=""><img class="icon" src="../images/instagram.png" alt="instagram link"></a>
+          <a href=""><img class="icon" src="../images/youtube.png" alt="youtube link"></a>
       </div>
   </header>
    
