--- a/rady/rady.html
+++ b/rady/rady.html
@@ -27,7 +27,7 @@
   <header>
     <h1 id="logo">My Healthy Cat</h1>
   </header>
-
+    <h2>RADY</h2>
   <div class="hrasek">
     <div class="article-container">
       <div class="article-box">
