zmena velikosti, zaobleni

--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -50,12 +50,12 @@
             <img class="reference-img" src="../images/OIP.jpg" alt="kočka s kytičkou">
             <div class="reference-text">
                 <div class="reference-author">
-                    <img class="reference-author-img" src="../images/EliškaZahradníková.jpg" alt="EliškaZahradníková">
-                    <span class="reference-author-name">Eliška Zahradníková</span>
+                    <img class="reference-author-img" src="../images/EliškaZahradníková.jpg" alt="EliškaHajná">
+                    <span class="reference-author-name">Eliška Hajná</span>
                 </div>
 
                 <p class="reference-description">
-                    "My Healthy Cat" je skvělým průvodcem pro každého, kdo chce zajistit, aby jeho kočka byla šťastná a zdravá. Doporučuji ji všem milovníkům koček!"
+                    "My Healthy Cat je skvělým průvodcem pro každého, kdo chce zajistit, aby jeho kočka byla šťastná a zdravá. Doporučuji ji všem milovníkům koček!"
                 </p>
             </div>
         </div>
@@ -74,7 +74,7 @@
         </div>
 
         <div class="reference-item">
-            <img class="reference-img" src="../images/OIP (5).jpg" alt="kočka ležící na gauči">
+            <img class="reference-img" src="../images/OIP (6).jpg" alt="kočka ležící na gauči">
             <div class="reference-text">
                 <div class="reference-author">
                     <img class="reference-author-img" src="../images/JiříŠtíhlík.jpg" alt="Jiří Štíhlík">
@@ -82,7 +82,7 @@
                 </div>
 
                 <p class="reference-description">
-                    "Tahle stránka je úžasná. Je skvělým průvodcem všechy, kteří žijí s kočkou. Poskytuje srozumitelné a důvěryhodné rady, které pokryly všechny důležité aspekty péče o kočky." 
+                    "Tahle stránka je úžasná. Poskytuje srozumitelné a důvěryhodné rady, které pokryly všechny důležité aspekty péče o kočky." 
                 </p>
             </div>
         </div>
