--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -40,8 +40,7 @@
                 </div>
 
                 <p class="reference-description">
-                    "Tak tohle je úžasné a užitečné! Díky stránce je moje kočka
-                    zdravá a šťastná. Tahle stránka je skvělým zdrojem informací pro, ať už začátečníky nebo zkušené chovatele. Doporučuji ji všem milovníkům koček!"
+                    "Tak tohle je úžasné a užitečné! Díky stránce je moje kočka zdravá a šťastná. Tahle stránka je skvělým zdrojem informací. Doporučuji ji všem milovníkům koček!"
                 </p>
             </div>
         </div>
