--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <section class="right-side">
                 <p class="description">
                     Vítej! Pokud toužíš po radách ohledně péče o tvou kočku, jsi tu správně. Chceš se ale pouze pobavit nad memes, nebo se chceš podívat na čtyřnohé kamarády návštěvníků naší stránky? I v takovém případě tu najdeš, co hledáš.
-                      </p>
+                    <br><span> Novinka! Otevřeli jsme eshop s kočičími oblečky na Halloween či na zimní období. Prvních 100 zákazníků získá dopravu zdarma! </span>
+                 </p>
                 <section class="page-link">
                     <a class="button" href="memes/memes.html">Memes</a>
                     <a class="button" href="rady/rady.html">Rady</a>
