--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -43,14 +43,104 @@
         </div>
         
         <div class="showcase">
-            <div class="product">
-                <img src="" alt="">
-                <h3></h3>
-                <h4></h4>
-                <p></p>
-                <p></p>
 
+            <div class="product">
+                <div class="image">
+                    <img src="produkty/kostym_pirat.webp" alt="">
+                </div>
+                <div class="text">
+                    <h3 class="name">Pirát</h3>
+                    <h4 class="price">250 Kč</h4>
+                    <p class="rating">4.7/5 ⭐️ (5 lidí)</p>
+                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                </div>
             </div>
+
+            <div class="product">
+                <div class="image">
+                    <img src="produkty/bee.avif" alt="">
+                </div>
+                <div class="text">
+                    <h3 class="name">Včela</h3>
+                    <h4 class="price">260 Kč</h4>
+                    <p class="rating">4.6/5 ⭐️ (10 lidí)</p>
+                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="image">
+                    <img src="produkty/kvetinka.jpg" alt="">
+                </div>
+                <div class="text">
+                    <h3 class="name">Květinka</h3>
+                    <h4 class="price">160 Kč</h4>
+                    <p class="rating">4.8/5 ⭐️ (7 lidí)</p>
+                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="image">
+                    <img src="produkty/kytara.webp" alt="">
+                </div>
+                <div class="text">
+                    <h3 class="name">S Kytarou</h3>
+                    <h4 class="price">290 Kč</h4>
+                    <p class="rating">5/5 ⭐️ (8 lidí)</p>
+                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="image">
+                    <img src="produkty/lvice.avif" alt="">
+                </div>
+                <div class="text">
+                    <h3 class="name">Lvice</h3>
+                    <h4 class="price">220 Kč</h4>
+                    <p class="rating">3.9/5 ⭐️ (8 lidí)</p>
+                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="image">
+                    <img src="produkty/princezna.avif" alt="">
+                </div>
+                <div class="text">
+                    <h3 class="name">Princezna</h3>
+                    <h4 class="price">160 Kč</h4>
+                    <p class="rating">4.2/5 ⭐️ (12 lidí)</p>
+                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="image">
+                    <img src="produkty/sob.jpg" alt="">
+                </div>
+                <div class="text">
+                    <h3 class="name">Sob</h3>
+                    <h4 class="price">270 Kč</h4>
+                    <p class="rating">5/5 ⭐️ (435 lidí)</p>
+                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="image">
+                    <img src="produkty/svetrik.jpg" alt="">
+                </div>
+                <div class="text">
+                    <h3 class="name">Svetřík</h3>
+                    <h4 class="price">130 Kč</h4>
+                    <p class="rating">4.7/5 ⭐️ (435 lidí)</p>
+                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                </div>
+            </div>
+
+
         </div>
 
     </main>
