header fix on obleceni

--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -37,7 +37,7 @@
 
     <main>
         <div class="intro">
-            <h1 class="title">Oblečky pro kočky</h1>
+            <h1 class="title-site">Oblečky pro kočky</h1>
             <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                 Molestias omnis quia eaque quisquam maiores? Est dolor cum ut iure delectus?</p>
         </div>
