--- a/memes/memes.html
+++ b/memes/memes.html
@@ -38,6 +38,7 @@
    <img src="../images/meme_cat_in_milk.jpg" alt="kočka v mléku">
    <img src="../images/meme_snack.jpg" alt="snack">
    <img src="../images/meme_selfie.jpg" alt="selfie">
+   <img src="../images/cat in bread.jpg" alt="toust">
    <img src="../images/meme_math.jpg" alt="matika">
    <img src="../images/meme_ugly.jpg" alt="is it because i'm ugly?">
    <img src="../images/meme_rucee.jpg" alt="s ručičkama">
