--- a/memes/memes.html
+++ b/memes/memes.html
@@ -23,11 +23,20 @@
     </ul>
     -->
     <header>
-      <h1 id="logo">My Healthy Cat</h1>
+        <div id="logo">
+           <img class="logo-img" src="../images/Návrh bez názvu.png" alt="logo">
+           <a class="title" href="../index.html"><p class="header-title">My Healthy Cat</p></a> 
+        </div> 
+        
+        <div class="socials">
+            <a href=""><img class="icon facebook" src="../images/facebook.png" alt="facebook link"></a>
+            <a href=""><img class="icon" src="../images/instagram.png" alt="instagram link"></a>
+            <a href=""><img class="icon" src="../images/youtube.png" alt="youtube link"></a>
+        </div>
     </header>
     <h2>Funny Cats</h2>
    
-    <p>Sice je důležité vědět, jak o kočičí mazlíčky správně pečovat, ale neméně důležité je nechat se jimi pobavit. Tato neobyčejná a fascinující zvířáta bývají často významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Na této stránce najdete pár nejlepších memů, které jsme vybíraly se slzami v očích. Pobavte se s námi! </p>
+    <p class="description-site">Sice je důležité vědět, jak o kočičí mazlíčky správně pečovat, ale neméně důležité je nechat se jimi pobavit. Tato neobyčejná a fascinující zvířáta bývají často významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Na této stránce najdete pár nejlepších memů, které jsme vybíraly se slzami v očích. Pobavte se s námi! </p>
 <section>
   
     <div class="gallery-img">
