fix header on remaining sites

--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -26,7 +26,16 @@
     </ul>
     -->
     <header>
-        <h1 id="logo">My Healthy Cat</h1>
+        <div id="logo">
+           <img class="logo-img" src="../images/Návrh bez názvu.png" alt="logo">
+           <a class="title" href="../index.html"><p class="header-title">My Healthy Cat</p></a> 
+        </div> 
+        
+        <div class="socials">
+            <a href=""><img class="icon facebook" src="../images/facebook.png" alt="facebook link"></a>
+            <a href=""><img class="icon" src="../images/instagram.png" alt="instagram link"></a>
+            <a href=""><img class="icon" src="../images/youtube.png" alt="youtube link"></a>
+        </div>
     </header>
     <h2 class="nadpis">Fotky a recenze od našich klientů</h2>
 
