--- a/rady/rady.html
+++ b/rady/rady.html
@@ -24,8 +24,17 @@
         <li>Silvie Bohatová</li>
     </ul>
     -->
-  <header>
-    <h1 id="logo">My Healthy Cat</h1>
+    <header>
+      <div id="logo">
+         <img class="logo-img" src="../images/Návrh bez názvu.png" alt="logo">
+         <a class="title" href="../index.html"><p class="header-title">My Healthy Cat</p></a> 
+      </div> 
+      
+      <div class="socials">
+          <a href=""><img class="icon facebook" src="../images/facebook.png" alt="facebook link"></a>
+          <a href=""><img class="icon" src="../images/instagram.png" alt="instagram link"></a>
+          <a href=""><img class="icon" src="../images/youtube.png" alt="youtube link"></a>
+      </div>
   </header>
     <h2>RADY</h2>
   <div class="hrasek">
