header change on all pages (memes broken)

--- a/index.html
+++ b/index.html
@@ -24,14 +24,24 @@
     -->
     <header>
         <div id="logo">
-           <img class="logo-img" src="images/Návrh bez názvu.png" alt="logo">
-           <a class="title" href="index.html"><p>My Healthy Cat</p></a>
+           <img class="logo-img" src="../images/Návrh bez názvu.png" alt="logo">
+           <a class="title" href="../index.html"><p class="header-title">My Healthy Cat</p></a> 
         </div> 
-        
-        <div class="socials">
-            <a href=""><img class="icon facebook" src="images/facebook.png" alt="facebook link"></a>
-            <a href=""><img class="icon" src="images/instagram.png" alt="instagram link"></a>
-            <a href=""><img class="icon" src="images/youtube.png" alt="youtube link"></a>
+
+
+        <div class="right-side">
+            <div class="links">
+                <a href="/memes/memes.html">Memes</a>
+                <a href="/rady/rady.html">Rady</a>
+                <a href="/galerie/galerie.html">Galerie</a>
+                <a href="/obleceni/obleceni.html">Charitativní E-shop</a>
+            </div>
+            <p class="divider">|</p>
+            <div class="socials">
+                <a href=""><img class="icon facebook" src="../images/facebook.png" alt="facebook link"></a>
+                <a href=""><img class="icon" src="../images/instagram.png" alt="instagram link"></a>
+                <a href=""><img class="icon" src="../images/youtube.png" alt="youtube link"></a>
+            </div>
         </div>
     </header>
 
