--- a/memes/memes.html
+++ b/memes/memes.html
@@ -31,7 +31,7 @@
 
         <div class="right-side">
             <div class="links">
-                <a href="#">Memes</a>
+                <a href="">Memes</a>
                 <a href="../rady/rady.html">Rady</a>
                 <a href="../galerie/galerie.html">Galerie</a>
                 <a href="../obleceni/obleceni.html">Charitativní E-shop</a>
