--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -112,7 +112,7 @@
                     <h3 class="name">Princezna</h3>
                     <h4 class="price">160 Kč</h4>
                     <p class="rating">4.2/5 ⭐️ (12 lidí)</p>
-                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                    <p class="product-desc">Narozeninový Oblek Pro Domácí Mazlíčky, Klobouk A Krk, Ozdobná Pokrývka Hlavy Z Festivalu Cat, Vhodná Pro Malé Kočky Na Nošení</p>    
                 </div>
             </div>
 
