--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -134,7 +134,7 @@
                     <h3 class="name">Sob</h3>
                     <h4 class="price">270 Kč</h4>
                     <p class="rating">5/5 ⭐️ (12 lidí)</p>
-                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                    <p class="product-desc">Oblečení pro kočky a psa Podzimní a zimní oblečení, vánoční obleček pro kočky, sobí obleček na zimu </p>    
                 </div>
             </div>
 
