upravy v textech o eshopu

--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -48,8 +48,7 @@
     <main>
         <div class="intro">
             <h1 class="title-site">Oblečky pro kočky</h1>
-            <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Molestias omnis quia eaque quisquam maiores? Est dolor cum ut iure delectus?</p>
+            <p class="description">50% veškerého výdělku jde na podporu opuštěných koček ve vybraných pražských útulcích. Prvních 100 zákazníků získává dopravu zdarma, neváhejte proto a nakupujte rychle! </p>
         </div>
         
         <div class="showcase">
