fix product cards & change text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a class="button" href="memes/memes.html">Memes</a>
                     <a class="button" href="rady/rady.html">Rady</a>
                     <a class="button" href="galerie/galerie.html">Galerie</a>
-                    <a class="button" href="obleceni/obleceni.html">Oblečení</a>
+                    <a class="button" href="obleceni/obleceni.html">Charitativní E-shop</a>
                 </section>
             </section>
         </section>
