--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -145,7 +145,7 @@
                     <h3 class="name">Svetřík</h3>
                     <h4 class="price">130 Kč</h4>
                     <p class="rating">4.7/5 ⭐️ (30 lidí)</p>
-                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                    <p class="product-desc">Zahřejte svého mazlíčka příjemným svetříkem. Krátký rukáv a módní střih osvěží kočičí šatník a Vaše kočka se bude cítit teple a komfortně i při zimních radovánkách. Střih svetru neomezuje kočku při pohybu. Ochrání před chladem a ušpiněním na procházkách. Teplý límeček zahřeje krk. Pružný materiál kočičku nebude škrtit a usnadní také oblékání. Skvěle se také přizpůsobí postavě Vaší kočky. Svetry pro kočky nejsou vhodné do deštivých dní.</p>    
                 </div>
             </div>
 
