--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -109,7 +109,7 @@
                     <h3 class="name">Lvice</h3>
                     <h4 class="price">220 Kč</h4>
                     <p class="rating">3.9/5 ⭐️ (8 lidí)</p>
-                    <p class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, veniam aliquam fugit debitis magnam consequatur atque ratione, possimus dolores optio, ut at aut. Temporibus dolores ipsum ab id facere corporis!</p>    
+                    <p class="product-desc">Čelenka pro kočky, která promění kočičí hlavu ve lví hřívu. Zábavný a realistický doplněk, snadné nasazení a pohodlné nošení. </p>    
                 </div>
             </div>
 
