--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -73,7 +73,7 @@
                     <h3 class="name">Včela</h3>
                     <h4 class="price">260 Kč</h4>
                     <p class="rating">4.6/5 ⭐️ (10 lidí)</p>
-                    <p class="product-desc">včelí žlutá a černá mikina s kapucí Roztomilá teplá bunda s křídly a tykadly </p>    
+                    <p class="product-desc">včelí žlutá a černá mikina s kapucí Roztomilá teplá bunda s křídly a tykadly, vtipný obleček pro vašeho kočičího kamaráda</p>    
                 </div>
             </div>
 
