--- a/rady/rady.html
+++ b/rady/rady.html
@@ -46,11 +46,11 @@
           </div>
       </div>
   </header>
-    <h2>RADY</h2>
+    <h2 class="title-site">Rady</h2>
   <div class="hrasek">
     <div class="article-container">
       <div class="article-box">
-        <h3>1. Zajištění základních potřeb</h3>
+        <h3>Zajištění základních potřeb</h3>
         <p class="baf">Strava: Krmte svou kočku kvalitními granulemi nebo konzervami, které odpovídají jejím věkovým
           potřebám (kotě, dospělá kočka, starší kočka). Vyhněte se lidským potravinám, které mohou být pro kočky
           nebezpečné.
@@ -60,14 +60,14 @@
           je může odradit od jejího používání.</p>
       </div>
       <div class="article-box">
-        <h3>2. Zdraví</h3>
+        <h3>Zdraví</h3>
         <p class="baf">Veterinární péče: Pravidelné návštěvy veterináře jsou klíčové. Kočky potřebují očkování,
           odčervení a pravidelné prohlídky.
           Kastrovaní: Kastrace nebo sterilizace může předejít mnoha zdravotním problémům a také nežádoucímu chování,
           jako je značkování teritoria. </p>
       </div>
       <div class="article-box">
-        <h3>3. Chování a socializace</h3>
+        <h3>Chování a socializace</h3>
         <p class="baf">Socializace: Pokud máte kotě, seznamte ho s různými lidmi a prostředím, aby bylo dobře
           socializované. U dospělých koček to může trvat déle, ale stále je to možné.
           Škrábání: Poskytněte kočce škrabadlo, aby si mohla brousit drápky. To jí pomůže udržovat zdravé drápy a
@@ -77,21 +77,21 @@
         </p>
       </div>
       <div class="article-box">
-        <h3>4. Bezpečnost</h3>
+        <h3>Bezpečnost</h3>
         <p class="baf">Venkovní rizika: Pokud má kočka přístup ven, zajistěte, aby byla v bezpečném prostředí. Ideální
           je venkovní prostor s omezeným přístupem nebo zabezpečený výběh.
           Nebezpečné rostliny a chemikálie: Některé rostliny a domácí chemikálie jsou pro kočky toxické. Ujistěte se, že
           vaše kočka nemá k těmto látkám přístup.</p>
       </div>
       <div class="article-box">
-        <h3>5. Trpělivost a láska </h3>
+        <h3>Trpělivost a láska </h3>
         <p class="baf">Trpělivost: Kočky mají svou vlastní osobnost a někdy mohou být tvrdohlavé. Buďte trpěliví a
           respektujte jejich prostor a tempo.
           Láska a pozornost: Kočky potřebují vaši lásku a pozornost. Věnujte jim čas na mazlení a hru, aby se cítily
           milované a součástí rodiny.</p>
       </div>
       <div class="article-box">
-        <h3>Proč není doporučeno dávat vaší kočce mléko?:</h3>
+        <h3>Proč není doporučeno dávat vaší kočce mléko?</h3>
         <p class="baf">Kočky postrádají enzymy nezbytné ke správnému trávení laktózy, což je cukr přítomný v kravském mléce. Podávání kravského mléka vaší kočce může vést k průjmu a bolestem žaludku, což je nepříjemné pro vaši kočku i pro vás a může dokonce vést k návštěvě veterináře. Kravské mléko je pro koťata obzvláště nebezpečné, zejména odstředěná mléka a jiná mléka s nízkým obsahem tuku, protože neobsahuje živiny, které koťata potřebují k prospívání. Stejně jako dospělé kočky nejsou koťata schopna správně trávit kravské mléko, což vede k průjmu a dehydrataci, která může být smrtelná. </p>
       </div>
       <div class="article-box">
@@ -137,7 +137,7 @@
           hořkou chuť. </p>
       </div>
       <div class="article-box">
-        <h3>Proč je odstraňování drápků pro vaše kočky škodlivé?: </h3>
+        <h3>Proč je odstraňování drápků pro vaše kočky škodlivé?</h3>
         <p class="baf">Odstraňování drápků u koček zahrnuje úplné odstranění prvního kloubu prstů. Tato praxe byla v
           mnoha zemích zakázána a při diskusích o ní často panuje napětí. Odstraňování drápků u koček je však spojováno
           s artritidou, generalizovanou bolestí a problémy s chováním. Některé kočky bez drápků odmítají používat kočičí
