--- a/rady/rady.html
+++ b/rady/rady.html
@@ -105,7 +105,7 @@
       </div>
       <div class="article-box">
         <h3>Cibule, česnek a pažitka</h3>
-        <p class="baf">Co se stane: U koček, když jsou tyto sloučeniny obsahující síru rozloženy tělem a absorbovány do
+        <p class="baf">Co se stane když je kočka pozře?: U koček, když jsou tyto sloučeniny obsahující síru rozloženy tělem a absorbovány do
           krevního oběhu, způsobují poškození červených krvinek. V závažných případech červené krvinky prasknou a uvolní
           poškozené proteiny hemoglobinu zvané Heinzova tělíska, což může vést k anémii a dokonce k poškození ledvin.
         </p>
@@ -120,7 +120,7 @@
       </div>
       <div class="article-box">
         <h3>Kávové kapsle, zrna, mleté a kofeinové energetické nápoje </h3>
-        <p class="baf">Co se stane: U koček má požití kofeinu vliv na střeva, ledviny, nervový a kardiovaskulární systém
+        <p class="baf">Co se stane když vaše koška sní některé z těhto produktů?: U koček má požití kofeinu vliv na střeva, ledviny, nervový a kardiovaskulární systém
           a pokud se neléčí, může být smrtelné.
           Dalším rizikem pro kočky je, že kofein chutná hořce, což ho činí pro kočky velmi přitažlivým. Uvědomte si, že
           kofein je přítomen v mnoha energetických nápojích a kolách. Kromě toho se potenciálně smrtelný účinek může
@@ -128,7 +128,7 @@
       </div>
       <div class="article-box">
         <h3>Čokoláda</h3>
-        <p class="baf">Co se stane: Pokud ho sní vaše kočka, může to rychle způsobit žaludeční nevolnost; hyperaktivita;
+        <p class="baf">Co se stane pokud ji vaše kočka sní?: Pokud ho sní vaše kočka, může to rychle způsobit žaludeční nevolnost; hyperaktivita;
           nepříznivě ovlivňují ledviny a nervový systém a také vyvolávají abnormální srdeční rytmus. V nejhorším případě
           může být smrtelná.
           Hořká čokoláda, kakaový prášek, kakaové máslo a kakaové boby jsou nejnebezpečnějšími druhy čokolády, protože
