--- a/rady/rady.html
+++ b/rady/rady.html
@@ -112,7 +112,7 @@
       </div>
       <div class="article-box">
         <h3>Xylitol</h3>
-        <p class="baf">Co se stane:
+        <p class="baf">Co se stane když vaše kočka sní xylitol?:
           Když ho snědí kočky, může xylitol způsobit abnormální zvýšení uvolňování inzulínu ze slinivky břišní, což zase
           vede ke snížení celkové hladiny cukru v krvi.
           Časnými příznaky problému s xylitolem jsou letargie, zvracení a ztráta svalové koordinace, ale bez rychlé
