--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -47,7 +47,8 @@
             </div>
         </div>
     </header>
-    <h2 class="nadpis">Fotky a recenze od našich klientů</h2>
+    <h2 class="nadpis">Galerie vašich koček</h2>
+    <p>Na této stránce se můžeš podívat na recenze našich zákazníků společně s fotkami jejich mazlíčků.</p>
 
     <div class="reference-container">
         <div class="reference-item">
