--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -48,7 +48,7 @@
         </div>
     </header>
     <h2 class="nadpis">Galerie vašich koček</h2>
-    <p>Na této stránce se můžeš podívat na recenze našich zákazníků společně s fotkami jejich mazlíčků.</p>
+    <p class="description-site">Na této stránce se můžeš podívat na recenze našich zákazníků společně s fotkami jejich mazlíčků.</p>
 
     <div class="reference-container">
         <div class="reference-item">
