buttons on obleceni (broken)

--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -63,6 +63,14 @@
                     <p class="rating">4.7/5 ⭐️ (5 lidí)</p>
                     <p class="product-desc">Kočičí pirátský kostým s kloboukem a iluzí lidských rukou s hákem. Obleček je perfektní pro tématické akce i pro vtipné fotky. Pohodlné nošení. </p>    
                 </div>
+
+                <a class="buy-a" href="">
+                    <div class="buy">
+                        <img class="icon" src="shopping-cart.png" alt="">
+                        <p class="cta">Přidat do košíku</p>
+
+                    </div>
+                </a>
             </div>
 
             <div class="product">
@@ -75,6 +83,14 @@
                     <p class="rating">4.6/5 ⭐️ (10 lidí)</p>
                     <p class="product-desc">včelí žlutá a černá mikina s kapucí Roztomilá teplá bunda s křídly a tykadly, vtipný obleček pro vašeho kočičího kamaráda</p>    
                 </div>
+
+                <a class="buy-a" href="">
+                    <div class="buy">
+                        <img class="icon" src="shopping-cart.png" alt="">
+                        <p class="cta">Přidat do košíku</p>
+
+                    </div>
+                </a>
             </div>
 
             <div class="product">
@@ -87,6 +103,14 @@
                     <p class="rating">4.8/5 ⭐️ (7 lidí)</p>
                     <p class="product-desc">Čelenka pro kočky, která z hlavy vaší kočky vytvoří roztomilou květinu. Vtipný a originální doplněk, snadné nasazení. !</p>    
                 </div>
+
+                <a class="buy-a" href="">
+                    <div class="buy">
+                        <img class="icon" src="shopping-cart.png" alt="">
+                        <p class="cta">Přidat do košíku</p>
+
+                    </div>
+                </a>
             </div>
 
             <div class="product">
@@ -99,6 +123,14 @@
                     <p class="rating">5/5 ⭐️ (8 lidí)</p>
                     <p class="product-desc">Látkový kostým pro kočky s iluzí lidských rukou držících kytaru, ideální pro zábavné fotky a videa. Přitažlivý design a snadné nasazení. </p>    
                 </div>
+
+                <a class="buy-a" href="">
+                    <div class="buy">
+                        <img class="icon" src="shopping-cart.png" alt="">
+                        <p class="cta">Přidat do košíku</p>
+
+                    </div>
+                </a>
             </div>
 
             <div class="product">
@@ -111,6 +143,14 @@
                     <p class="rating">3.9/5 ⭐️ (8 lidí)</p>
                     <p class="product-desc">Čelenka pro kočky, která promění kočičí hlavu ve lví hřívu. Zábavný a realistický doplněk, snadné nasazení a pohodlné nošení. </p>    
                 </div>
+
+                <a class="buy-a" href="">
+                    <div class="buy">
+                        <img class="icon" src="shopping-cart.png" alt="">
+                        <p class="cta">Přidat do košíku</p>
+
+                    </div>
+                </a>
             </div>
 
             <div class="product">
@@ -123,6 +163,14 @@
                     <p class="rating">4.2/5 ⭐️ (12 lidí)</p>
                     <p class="product-desc">Narozeninový Oblek Pro Domácí Mazlíčky, Klobouk A Krk, Ozdobná Pokrývka Hlavy Z Festivalu Cat, Vhodná Pro Malé Kočky Na Nošení</p>    
                 </div>
+
+                <a class="buy-a" href="">
+                    <div class="buy">
+                        <img class="icon" src="shopping-cart.png" alt="">
+                        <p class="cta">Přidat do košíku</p>
+
+                    </div>
+                </a>
             </div>
 
             <div class="product">
@@ -135,6 +183,14 @@
                     <p class="rating">5/5 ⭐️ (12 lidí)</p>
                     <p class="product-desc">Oblečení pro kočky a psa, Podzimní a zimní oblečení, vánoční obleček pro kočky, sobí obleček na zimu </p>    
                 </div>
+
+                <a class="buy-a" href="">
+                    <div class="buy">
+                        <img class="icon" src="shopping-cart.png" alt="">
+                        <p class="cta">Přidat do košíku</p>
+
+                    </div>
+                </a>
             </div>
 
             <div class="product">
@@ -148,6 +204,14 @@
                     <p class="product-desc">Zahřejte svého mazlíčka příjemným svetříkem. Módní střih osvěží kočičí šatník a Vaše kočka se bude cítit teple a komfortně i v zimě. Střih svetru neomezuje kočku při pohybu. Ochrání před chladem a špínou. Teplý a pružný límeček zahřeje krk, ale nebude kočičku škrtit. Svetr nevhodný do deště.
                     </p>    
                 </div>
+
+                <a class="buy-a" href="">
+                    <div class="buy">
+                        <img class="icon" src="shopping-cart.png" alt="">
+                        <p class="cta">Přidat do košíku</p>
+
+                    </div>
+                </a>
             </div>
 
 
