--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -145,7 +145,7 @@
                     <h3 class="name">Svetřík</h3>
                     <h4 class="price">130 Kč</h4>
                     <p class="rating">4.7/5 ⭐️ (30 lidí)</p>
-                    <p class="product-desc">Zahřejte svého mazlíčka příjemným svetříkem. Módní střih osvěží kočičí šatník a Vaše kočka se bude cítit teple a komfortně i v zimě. Střih svetru neomezuje kočku při pohybu. Ochrání před chladem a špínou. Teplý a pružný límeček zahřeje krk, ale nebude kočičku škrtit. Svetr nevhodný do deště.
+                    <p class="product-desc"> Teplý zelený svetřík z nekousavého materiálu. Vhodný do zimních dnů, ochrání před špínou. Střih svetru neomezuje kočku při pohybu. Teplý a pružný límeček zahřeje krk, ale nebude kočičku škrtit. Svetr nevhodný do deště.
                     </p>    
                 </div>
             </div>
