--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -138,7 +138,7 @@
                     <img src="produkty/lvice.avif" alt="">
                 </div>
                 <div class="text">
-                    <h3 class="name">Lvice</h3>
+                    <h3 class="name">Lvíče</h3>
                     <h4 class="price">220 Kč</h4>
                     <p class="rating">3.9/5 ⭐️ (8 lidí)</p>
                     <p class="product-desc">Čelenka pro kočky, která promění kočičí hlavu ve lví hřívu. Zábavný a realistický doplněk, snadné nasazení a pohodlné nošení. </p>    
@@ -181,7 +181,7 @@
                     <h3 class="name">Sob</h3>
                     <h4 class="price">270 Kč</h4>
                     <p class="rating">5/5 ⭐️ (12 lidí)</p>
-                    <p class="product-desc">Oblečení pro kočky a psa, Podzimní a zimní oblečení, vánoční obleček pro kočky, sobí obleček na zimu </p>    
+                    <p class="product-desc">Oblečení pro kočky a psa, Podzimní a zimní oblečení, vánoční obleček pro kočky, sobí obleček na zimu. Příjemný nekousavý materiál. </p>    
                 </div>
 
                 <a class="buy-a" href="">
