--- a/rady/rady.html
+++ b/rady/rady.html
@@ -47,6 +47,7 @@
       </div>
   </header>
     <h2 class="title-site">Rady</h2>
+    <p class="popis">Naše stránka nabízí rady o péči o kočky, zahrnující výživu, zdraví, chování a prostředí. Najdete zde tipy na správnou výživu, prevence a řešení zdravotních problémů, rady ohledně kočičího chování a způsoby, jak vytvořit pro kočku bezpečné a stimulující prostředí. Ideální pro nové i zkušené majitele. </p>
   <div class="hrasek">
     <div class="article-container">
       <div class="article-box">
