--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img class="intro-img" src="images/cat.png" alt="cats"/>
             <section class="right-side">
                 <p class="description">
-                    Vítej! Pokud toužíš po radách ohledně péče o tvou kočku, jsi tu správně. Chceš se ale pouze pobavit nad memes, nebo se chceš podívat na čtyřnohé kamarády návštěvníků naší stránky? I v takovém případě tu najdeš, co hledáš.
+                    Vítejte! Pokud toužíte po radách ohledně péče o vaši kočku, jste tu správně. Chcete se ale pouze pobavit nad memes, nebo se chcete podívat na čtyřnohé kamarády návštěvníků naší stránky? I v takovém případě tu najdete, co hledáte.
                     <br><span> Novinka! Otevřeli jsme charitativní eshop s kočičími oblečky na Halloween či na zimní období! </span>
                  </p>
                 <section class="page-link">
