--- a/obleceni/obleceni.html
+++ b/obleceni/obleceni.html
@@ -38,9 +38,9 @@
             </div>
             <p class="divider">|</p>
             <div class="socials">
-                <a href=""><img class="icon facebook" src="../images/facebook.png" alt="facebook link"></a>
-                <a href=""><img class="icon" src="../images/instagram.png" alt="instagram link"></a>
-                <a href=""><img class="icon" src="../images/youtube.png" alt="youtube link"></a>
+                <a href="https://www.facebook.com/MyHealthyCat"><img class="icon facebook" src="../images/facebook.png" alt="facebook link"></a>
+                <a href="https://www.instagram.com/myhealthycat?igsh=ZTxMxJnNnRzNGJn"><img class="icon" src="../images/instagram.png" alt="instagram link"></a>
+                <a href="https://youtube.com/@myhealthycat?si=p9EzZl1JgwagAgzy"><img class="icon" src="../images/youtube.png" alt="youtube link"></a>
             </div>
         </div>
     </header>
