--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
     <main>
         <section class="introduction">
-            <img class="intro-img" src="images/cat.png" alt="cats"/>
+            <img class="intro-img" src="images/cat.png" alt="">
+            <!-- <img class="intro-img" src="images/cat1.jpg" alt="cats"/>
+            <img class="intro-img" src="images/cat2.jpg" alt=""> -->
             <section class="right-side">
                 <p class="description">
                     Vítejte! Pokud toužíte po radách ohledně péče o vaši kočku, jste tu správně. Chcete se ale pouze pobavit nad memes, nebo se chcete podívat na čtyřnohé kamarády návštěvníků naší stránky? I v takovém případě tu najdete, co hledáte.
