--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -168,7 +168,7 @@
             <div class="reference-text">
                 <div class="reference-author">
                     <img class="reference-author-img" src="../images/vendulaStěhovavá.jpg" alt="Vendula Stěhovavá">
-                    <span class="reference-author-name">Vendula Stěhovavá</span>
+                    <span class="reference-author-name">Vendula Malá</span>
                 </div>
 
                 <p class="reference-description">
