--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -34,10 +34,10 @@
 
         <div class="right-side">
             <div class="links">
-                <a href="../rady/rady.html">Rady</a>
-                <a href="../memes/memes.html">Memes</a>
-                <a href="">Galerie</a>
-                <a href="../obleceni/obleceni.html">Charitativní E-shop</a>
+                <div class="right-box"><a href="../rady/rady.html">Rady</a></div>
+                <div class="right-box"><a href="../memes/memes.html">Memes</a></div>
+                <div class="right-box"><a href="">Galerie</a></div>
+                <div class="right-box"><a href="../obleceni/obleceni.html">Charitativní E-shop</a></div>
             </div>
             <p class="divider">|</p>
             <div class="socials">
