--- a/memes/memes.html
+++ b/memes/memes.html
@@ -44,9 +44,12 @@
             </div>
         </div>
     </header>
-    <h1>Funny Cats</h1>
-   
-    <p class="description-site">Sice je důležité vědět, jak o kočičí mazlíčky správně pečovat, ale neméně důležité je nechat se jimi pobavit. Tato neobyčejná a fascinující zvířáta bývají často významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Na této stránce najdete pár nejlepších memů, které jsme vybíraly se slzami smíchu v očích. Pobavte se s námi! </p>
+
+    <div class="meme-intro">
+        <h1>Funny Cats</h1>
+        <p class="description-site">Sice je důležité vědět, jak o kočičí mazlíčky správně pečovat, ale neméně důležité je nechat se jimi pobavit. Tato neobyčejná a fascinující zvířáta bývají často významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Na této stránce najdete pár nejlepších memů, které jsme vybíraly se slzami smíchu v očích. Pobavte se s námi! </p>
+    </div>
+
 <section>
   
     <div class="gallery-img">
